# posaix

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  cppxbuildconfig.json
source/: CMakeLists.txt
source/application/: AppClock.cpp  AppClock.hpp  CMakeLists.txt  FrameRateCounter.cpp  FrameRateCounter.hpp  PXApplication.cpp  PXApplication.hpp  SDLUserEvents.hpp
source/engine/: CMakeLists.txt  CubeData.cpp  CubeData.hpp  Projection.hpp  Rendering.cpp  Rendering.hpp  example.py
source/engine/rayengine/: CMakeLists.txt  Cube.hpp  Ray.hpp
source/gui/: CMakeLists.txt  InteractiveDisplay.cpp  InteractiveDisplay.hpp  PXGUI.cpp  PXGUI.hpp  RotationDisplay.cpp  RotationDisplay.hpp  TranslationDisplay.cpp  TranslationDisplay.hpp
source/model/: CMakeLists.txt  UpdatableData.hpp
source/model/data/: CMakeLists.txt  TranslationData.hpp
source/model_non_virtual/: UpdatableData.hpp
source/model_non_virtual/data/: CMakeLists.txt  TranslationData.hpp  TriggerUpdate.cpp  TriggerUpdate.hpp
source/utilities/: CMakeLists.txt  Utilities.cpp  Utilities.hpp
staging/: CMakeLists.txt  main.cpp
